--- a/.github/workflows/helm-package.yaml
+++ b/.github/workflows/helm-package.yaml
@@ -37,5 +37,43 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: helm-charts
+          name: gitversion.env
           path: gitversion.env
+
+  build-helm-package:
+    runs-on: ubuntu-latest
+    needs:
+      - generate-semantic-version
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: gitversion.env
+
+      - name: Load Variables
+        run: cat gitversion.env >> $GITHUB_ENV
+
+      - uses: azure/setup-helm@v3
+        with:
+          version: '3.13.2'
+
+      - name: Lint Charts
+        run: helm lint .
+
+      - name: Build Templates
+        run: helm template helm . > helm.template.yaml
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: helm.template.yaml
+          path: helm.template.yaml
+
+      - name: Package Helm
+        run: helm package . --version $GitVersion_FullSemVer
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: package
+          path: helm-kind-actions-${{ env.GitVersion_FullSemVer }}.tgz
