--- a/.github/workflows/helm-package.yaml
+++ b/.github/workflows/helm-package.yaml
@@ -77,3 +77,37 @@ jobs:
         with:
           name: helm-kind-actions-${{ env.GitVersion_FullSemVer }}.tgz
           path: helm-kind-actions-${{ env.GitVersion_FullSemVer }}.tgz
+
+  test-chart:
+    runs-on: ubuntu-latest
+    needs:
+      - build-helm-package
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: gitversion.env
+
+      - name: Load Variables
+        run: cat gitversion.env >> $GITHUB_ENV
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: helm-kind-actions-${{ env.GitVersion_FullSemVer }}.tgz
+
+      - uses: azure/setup-helm@v4.1.0
+        with:
+          version: '3.13.2'
+
+      - name: Download Certificate
+        run: |
+          set -e
+
+          mkdir -p ${{ github.workspace }}/.github/certs/registry.docker.com
+
+          openssi s_client \
+            -connect registry.docker.com:443 \
+            -showcents </dev/null \
+          | openssl x509 \
+            -outform pem > ${{ github.workspace }}/.github/certs/registry.docker.com/registry.crt
+
+
