--- a/.github/workflows/helm-package.yaml
+++ b/.github/workflows/helm-package.yaml
@@ -110,6 +110,13 @@ jobs:
           | openssl x509 \
             -outform pem > ${{ github.workspace }}/.github/certs/registry.docker.com/registry.crt
 
+      # Only Checking Out .github Folder
+      - uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            .github
+          sparse-checkout-cone-mode: false
+
       - name: Create k8s Kind Cluster
         uses: helm/kind-action@v1
         with:
