--- a/.github/workflows/helm-package.yaml
+++ b/.github/workflows/helm-package.yaml
@@ -171,3 +171,26 @@ jobs:
             --wait \
             --timeout=30s \
             --set imagePullSecrets[0].name=ghcr-login-secret
+
+      - name: Log Results
+        if: failure()
+        run: |
+          set -e
+
+          mkdir -p results/Logs
+
+          # Get Details and Events
+          kubectl describe all > results/describe.yaml
+          kubectl describe all --namespace="kube-system" > results/describe.system.yaml
+
+          # Download Logs
+          kubectl get pod --no-headers -o custom-columns=":metadata,name" | xargs -I {} sh -c 'kubectl logs "$1" --all-containers=true > "results/logs/$1.log" || :' -- (}
+
+          # Download Previous Logs
+          kubectl get pod --no-headers -o custom-columns=":metadata,name" | xargs -I {} sh -c 'kubectl logs "$1" --previous --all-containers=true > "results/logs/$1.previous.log" || :' -- (}
+
+      - uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: results
+          path: results
